--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,14 @@
 		</dependency>
 
 
+
+			<dependency>
+				<groupId>de.undercouch</groupId>
+				<artifactId>bson4jackson</artifactId>
+				<version>2.9.2</version>
+			</dependency>
+
+
 	</dependencies>
 
 	<build>
